--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/* site structure */
+
 html, body, {
     position:fixed;
     top:0;
@@ -13,6 +15,7 @@ html, body, {
   padding: 0;
   margin: 0;
 }
+
 #fullPage{
   background-color: grey;
   height: 100%;
@@ -24,16 +27,88 @@ html, body, {
 
 }
 
+#navToggle {
+
+}
+
+#navToggle.navOpen {
+  background-color: black;
+  color: white;
+}
 .navButton {
   background-color: yellow;
   float: left;
   width: 50%;
   height: 100%;
-  border-style: solid;
-  border: 10px, black;
 }
 
 #mainBody {
   background-color: red;
   height: 87%;
+  position: relative;
+}
+
+#navMenu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+#homeButton {
+  width: 99%;
+  height: 19%;
+}
+
+.navMenuButton {
+  float: left;
+  width: 49%;
+  background-color: rgba(black, 0.3);
+  height: 38%;
+  margin: 0.5%;
+  text-align: center;
+}
+
+.HoverBorder {
+  border-style: solid;
+  border: white, 5px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: black;
+  border-color: white;
+}
+
+/* typography */
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
+}
+
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: #777;
+}
+
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
 }
