--- a/app/views/layouts/_navBar.html.erb
+++ b/app/views/layouts/_navBar.html.erb
@@ -1,6 +1,6 @@
 <div id="mainNav"class="container-fluid">
   <div class="navButton"id="navToggle">PicturePerfect</div>
-  <%= link_to '#' do %>
+  <%= link_to signup_url do %>
     <div class="navButton modalClick">SignIn/SignUp</div>
   <% end %>
 </div>
