Basic login implemented

--- a/app/views/layouts/_navBar.html.erb
+++ b/app/views/layouts/_navBar.html.erb
@@ -1,6 +1,13 @@
 <div id="mainNav"class="container-fluid">
   <div class="navButton"id="navToggle">PicturePerfect</div>
-  <%= link_to signup_url do %>
-    <div class="navButton modalClick">SignIn/SignUp</div>
+  <% if logged_in? %>
+    <%= link_to current_user do %>
+      <div class="navButton modalClick">
+        <%=current_user.username%></div>
+    <% end %>
+  <% else %>
+    <%= link_to signup_url do %>
+      <div class="navButton modalClick">SignIn/SignUp</div>
+    <% end %>
   <% end %>
 </div>
