--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,5 @@
 <% provide(:title, @user.username) %>
 <p>Welcome </p><%= @user.username %>
+<%= link_to logout_url, method: "delete" do %>
+  <div class="">SignIn/SignUp</div>
+<% end %>
