--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,6 +14,8 @@
     <%= render 'shared/error_messages' %>
     <%= f.input :username, label: 'Username', placeholder: 'Username' %>
     <%= f.input :password, label: 'Password', placeholder: 'Password' %>
+    <%= f.input :remember_me, as: :boolean,
+    checked_value: true, unchecked_value: false, label: 'Remember Me' %>
     <%= f.button :submit %>
   <% end %>
 </div>
