--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -119,15 +119,9 @@ p {
   line-height: 1.7em;
 }
 
-/* miscellaneous */
-
-.debug_dump {
-  clear: both;
-  float: left;
+.indexUser {
   width: 100%;
-  margin-top: 45px;
-  @include box_sizing;
-  -moz-box-sizing:    border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing:         border-box;
+  background-color: grey;
 }
+
+/* pagination */
