--- a/app/views/layouts/_navBar.html.erb
+++ b/app/views/layouts/_navBar.html.erb
@@ -6,8 +6,8 @@
         <%=current_user.username%></div>
     <% end %>
   <% else %>
-    <%= link_to signup_url do %>
-      <div class="navButton modalClick">SignIn/SignUp</div>
+    <%= link_to login_url do %>
+      <div class="navButton modalClick">Login</div>
     <% end %>
   <% end %>
 </div>
