--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,8 @@
-<p>Index page</p>
+<% provide(:title, 'User Index') %>
+<h1>All users</h1>
+
+
+<ul class="users">
+  <%= render @users %>
+</ul>
+<%= will_paginate %>
