--- a/app/views/layouts/_navMenu.html.erb
+++ b/app/views/layouts/_navMenu.html.erb
@@ -5,13 +5,13 @@
   <%= link_to index_url do %>
     <div class="navMenuButton modalClick">User Index</div>
   <% end %>
-  <%= link_to '#' do %>
+  <%= link_to top_url do %>
     <div class="navMenuButton modalClick">Top Rated Pictures</div>
   <% end %>
-  <%= link_to '#' do %>
+  <%= link_to random_url do %>
     <div class="navMenuButton modalClick">Go to Random Picture</div>
   <% end %>
-  <%= link_to '#' do %>
+  <%= link_to siteInfo_url do %>
     <div class="navMenuButton modalClick">Additional Site Information</div>
   <% end %>
 </div>
