--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -1,8 +1,8 @@
 <%= link_to content do %>
-  <div class="modalClick">
+  <div class="modalClick contentPreview">
+    <%= image_tag content.picture.url(:thumb) %>
     <%= content.name %>
     <%= content.desc %>
     <%= content.rating %>
-    <%= content.user.username %>
   </div>
 <% end %>
