--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -149,6 +149,26 @@ a:hover {
   height: 50%;
 }
 
+.userIndex {
+  width: 48%;
+  height: 15%;
+  margin: 10px;
+  float: left;
+}
+
+.indexPic {
+  height: 100%;
+  width: 15%;
+  background-color: gray;
+  background-size: cover;
+  float: left;
+}
+
+.indexPic img {
+  height: 100%;
+  width: 100%;
+}
+
 .fullImage {
   width: 100%;
   height: 113%;
