--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -3,6 +3,6 @@
     <%= image_tag content.picture.url(:thumb) %>
     <%= content.name %>
     <%= content.desc %>
-    <%= content.rating %>
+    <%= content.weighted_score %>
   </div>
 <% end %>
