--- a/app/views/contents/_comment_section.html.erb
+++ b/app/views/contents/_comment_section.html.erb
@@ -1,14 +1,27 @@
 <div id="commentSection">
-  <% if @comments.any? %>
-  <ul>
-    <%= render @comments %>
-  </ul>
-    <%= will_paginate @comments %>
-  <% else %>
-    <p>Content has no comments</p>
-  <% end %>
-  <%= simple_form_for [@content, @comment] do |f| %>
-    <%= f.input :content_text, placeholder: 'Enter comment' %>
-    <%= f.button :submit %>
-  <% end %>
+  <div id="commentBlock">
+    <% if @comments.any? %>
+      <ul>
+        <%= render @comments %>
+      </ul>
+    <% else %>
+      <p>Content has no comments</p>
+    <% end %>
+    <%= simple_form_for [@content, @comment] do |f| %>
+      <%= f.input :content_text, placeholder: 'Enter comment' %>
+      <%= f.button :submit %>
+    <% end %>
+  </div>
+  <div style="height: 15%; width: 100%;">
+    <%= link_to path_to_prev_page(@comments) do %>
+      <div class="modalClick pageButton">
+        Prev
+      </div>
+    <% end %>
+    <%= link_to path_to_next_page(@comments) do %>
+      <div class="modalClick pageButton">
+        Next
+      </div>
+    <% end %>
+  </div>
 </div>
