--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -96,8 +96,13 @@ a:hover {
 
 #pictureBox {
   width: 100%;
-  height: 85%;
+  height: 100%;
   background-color: green;
+}
+
+#showContain {
+  width: 100%;
+  height: 85%;
 }
 
 .nextPrevBox {
@@ -209,9 +214,14 @@ a:hover {
 
 #commentSection {
   width: 100%;
-  height: 85%;
+  height: 100%;
   background-color: purple;
   display: none;
+}
+
+#commentBlock {
+  height: 85%;
+  width: 100%;
 }
 
 #yesProfile {
@@ -256,4 +266,19 @@ p {
 .indexUser {
   width: 100%;
   background-color: grey;
+}
+
+/* paginate */
+
+.paginationSite {
+  height: 12%;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+}
+
+.pageButton {
+  width: 50%;
+  height: 100%;
+  float: left;
 }
