--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -6,4 +6,15 @@
   <% end %>
 <% end %>
 <%= render @contents %>
-<%= will_paginate %>
+<div class="paginationSite">
+  <%= link_to path_to_prev_page(@contents) do %>
+    <div class="modalClick pageButton">
+      Prev
+    </div>
+  <% end %>
+  <%= link_to path_to_next_page(@contents) do %>
+    <div class="modalClick pageButton">
+      Next
+    </div>
+  <% end %>
+</div>
