--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,3 +1,14 @@
 <p>Recently uploaded</p>
 <%= render @contents %>
-<%= will_paginate @contents %>
+<div class="paginationSite">
+  <%= link_to path_to_prev_page(@contents) do %>
+    <div class="modalClick pageButton">
+      Prev
+    </div>
+  <% end %>
+  <%= link_to path_to_next_page(@contents) do %>
+    <div class="modalClick pageButton">
+      Next
+    </div>
+  <% end %>
+</div>
