--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,4 +2,15 @@
 <h1>All users</h1>
 
 <%= render @users %>
-<%= will_paginate %>
+<div class="paginationSite">
+  <%= link_to path_to_prev_page(@users) do %>
+    <div class="modalClick pageButton">
+      Prev
+    </div>
+  <% end %>
+  <%= link_to path_to_next_page(@users) do %>
+    <div class="modalClick pageButton">
+      Next
+    </div>
+  <% end %>
+</div>
