--- a/app/views/contents/_picture_menu.html.erb
+++ b/app/views/contents/_picture_menu.html.erb
@@ -23,8 +23,7 @@
         <% end %>
       </div>
     <% else %>
-      <%= render 'upvote_blank' %>
-      <%= render 'downvote_blank' %>
+      <p>Please login to vote</p>
     <% end %>
   </div>
   <div class="pictureMenuButton" id="commentButton">
