--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
-<li>
-  <%= comment.user.username %>
-  <%= comment.content_text %>
-  Posted <%= time_ago_in_words(comment.created_at) %>
-</li>
+<div class="comment">
+  <div class="commentTxt"><%= comment.content_text %></div>
+  <div class="commentUsername"><%= comment.user.username %></div>
+  <div class="commentTime">Posted <%= time_ago_in_words(comment.created_at) %></div>
+</div>
