--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,26 @@
 <% provide(:title, "Signup") %>
-<div>
-  <%= simple_form_for @user do |f| %>
-    <%= render 'shared/error_messages' %>
-    <%= f.input :username, label: 'Username', placeholder: 'Username' %>
-    <%= f.input :description, label: 'Description',
-     placeholder: 'Description' %>
-    <%= f.input :password, label: 'Password', placeholder: 'Password' %>
-    <%= f.input :password_confirmation,
-    label: 'Confirm Password', placeholder: 'Password' %>
-    <%= f.input :profile_picture,
-     accept: 'image/jpeg,image/gif,image/png',
-     label: "Add profile picture" %>
-    <%= f.button :submit %>
+<div class="formBoxContainer">
+  <div class="formBox">
+    <%= simple_form_for @user do |f| %>
+      <%= f.input :username, label: 'Username', placeholder: 'Username', :error => false %>
+      <%= f.input :description, label: 'Description',
+       placeholder: 'Description', :error => false %>
+      <%= f.input :password, label: 'Password', placeholder: 'Password', :error => false %>
+      <%= f.input :password_confirmation,
+      label: 'Confirm Password', placeholder: 'Password', :error => false %>
+      <%= f.input :profile_picture,
+       accept: 'image/jpeg,image/gif,image/png',
+       label: "Add profile picture", input_html: { class: 'fileSelect'} %>
+      <%= f.button :submit %>
+  </div>
+  <%= link_to login_url do %>
+    <div class="addFormButtons">Go to login</div>
+  <% end %>
+    <div class="errorBox">
+      <%= render 'shared/error_messages', object: f.object %>
+    </div>
+  <% end %>
+  <%= link_to login_url do %>
+    <div class="addFormButtons">Go to login</div>
   <% end %>
 </div>
-<%= link_to login_url do %>
-  <div class="">Go to login</div>
-<% end %>
